<resources>
    <string name="app_name">Meteoship</string>
    <string name="api_key">29e38f51bd5b45409ff15c7edad58c31</string>
    <string name="current_date">Current date</string>
    <string name="range_date">5 days forecast</string>
    <string name="prediction">Predict</string>
    <string name="details">Details</string>
    <string name="temperature_max">Temperature max:</string>
    <string name="temperature_min">Temperature min:</string>
    <string name="temperature_feels_like">Feels like:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="relative_humidity">Relative humidity:</string>
    <string name="connection_lost_dialog_message">Sorry, but your conection is lost, check network and try again</string>
    <string name="ooooops">Ooooops</string>
    <string name="ok">ok</string>
    <string name="connection_status_success">Connected</string>
    <string name="connection_status_lost">Connection is lost</string>
    <string name="select">Select</string>
    <string name="environment">Environment</string>
    <string name="hemisphere">Hemisphere:</string>
    <string name="north">North</string>
    <string name="local_pressure_weather_range_mb">Local Pressure \'Weather Range\' (mb) :</string>
    <string name="low">Low:</string>
    <string name="high">High:</string>
    <string name="current_variables">Current Variables</string>
    <string name="wind_conditions">Wind conditions:</string>
    <string name="month">Month:</string>
    <string name="baro">Baro</string>
    <string name="relative_sea_level_adjusted">Relative / Sea Level Adjusted:</string>
    <string name="current_pressure">Current pressure:</string>
    <string name="trend">Trend:</string>
    <string name="_12_hour_forecast">12 Hour Forecast:</string>
    <string name="start">Start</string>
    <string name="south">South</string>
</resources>
