<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_color"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="@string/environment"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/hemisphere"
                android:textColor="@color/default_text_color" />


            <RadioGroup
                android:id="@+id/hemisphere"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/north"
                    style="@style/MyRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/north"
                    android:textColor="@color/default_text_color" />

                <RadioButton
                    android:id="@+id/south"
                    style="@style/MyRadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/south"
                    android:textColor="@color/default_text_color" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/local_pressure_weather_range_mb"
            android:textColor="@color/default_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/low"
                android:textColor="@color/default_text_color" />

            <EditText
                android:id="@+id/pressure_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/prediction_edit_text"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:text="950" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/high"
                android:textColor="@color/default_text_color" />

            <EditText
                android:id="@+id/pressure_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/prediction_edit_text"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:text="1050" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/title_color"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="@string/current_variables"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/wind_conditions"
                android:textColor="@color/default_text_color" />

            <Spinner
                android:id="@+id/wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/prediction_spinner"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/month"
                android:textColor="@color/default_text_color" />

            <Spinner
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/prediction_spinner"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/title_color"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="@string/baro"
            android:textColor="@color/default_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/current_pressure"
                android:textColor="@color/default_text_color" />

            <EditText
                android:id="@+id/current_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/prediction_edit_text"
                android:inputType="numberDecimal"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/trend"
                android:textColor="@color/default_text_color" />

            <Spinner
                android:id="@+id/trend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/prediction_spinner"
                android:padding="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="16dp"
                android:background="@color/default_text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/_12_hour_forecast"
                android:textColor="@color/default_text_color" />

            <TextView
                android:id="@+id/weather_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_12_hour_forecast"
                android:textSize="16sp"
                tools:textColor="@color/default_text_color" />

        </LinearLayout>

        <Button
            android:id="@+id/predict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:background="@drawable/btn_predict"
            android:enabled="false"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/predict_btn_text_color"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>